--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "locale:extract": "lingui extract",
-    "locale:compile": "lingui compile"
+    "extract": "lingui extract"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
